proxima/infra/hcloud/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: infra-hcloud
spec:
  endpointSelector: {}
  ingress:
    # Allow within Namespace
    - fromEndpoints:
      - {}
  egress:
    # Allow within Namespace
    - toEndpoints:
      - {}
    # DNS access, restrict queries.
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*.proxima.sigurs.io"
              - matchPattern: "*.svc.proxima.sigurs.io"
              - matchPattern: "*.infra-cilium.svc.proxima.sigurs.io"
              - matchPattern: "api.hetzner.cloud"

    # Kubernetes API access
    - toServices:
        - k8sService:
            serviceName: kubernetes
            namespace: default
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

    # Hetzner instance metadata service (local to node)
    - toCIDR:
        - 169.254.169.254/32
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP

    # Hetzner API access
    - toFQDNs:
        - matchPattern: "api.hetzner.cloud"
